added a review table ( with association to places table), deleted indoors and outdoors tables, updated routes

--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,7 @@
 </head>
 
 <body>
-    <form>
-        Name:
-        <br>
-        <input type="text" name="name">
-        <br> 
-        Location:
-        <br>
-        <input type="text" name="location">
-    </form>
-    <button type="button">Click Me!</button>
+    <!--Home page here-->
 </body>
 
 </html>
