added results.js with data logged

--- a/public/result.html
+++ b/public/result.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title></title>
 </head>
 
 <body>
     <!--This page displays the chosen search result with its up to date rating and reviews-->
-</body>
 
+<div id="places"></div>
+<script src="js/result.js" type="text/javascript"></script>
+</body>
 </html>
+
