added browse.js and browse.html and sending data to the page

--- a/public/browse.html
+++ b/public/browse.html
@@ -11,10 +11,9 @@
 </head>
 
 <body>
-    <!--This page is now SEARCH RESULTS - 2B -->
+    <!--This page is now BROWSE - 4A -->
 
 <div id="places"></div>
-<script src="js/result.js" type="text/javascript"></script>
+<script src="js/browse.js" type="text/javascript"></script>
 </body>
 </html>
-
