--- a/public/result.html
+++ b/public/result.html
@@ -4,14 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+       <!--Let browser know website is optimized for mobile-->
+       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+       <!--Import Google Icon Font-->
+       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   
+       <!-- Compiled and minified CSS -->
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+   
+       <!-- Compiled and minified JavaScript -->
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+   
+   
+       <!--Import jQuery before materialize.js-->
+       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+       <script type="text/javascript" src="js/materialize.min.js"></script>
+   
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF3cJTRy-rvv-j_2VUSZJs22QjvRzVVcg"></script>
+       <title>Ruff Spot | Woof </title>
 </head>
 
 <body>
     <!--This page is now SEARCH RESULTS - 2B -->
+    <nav>
+            <div class="nav-wrapper">
+                <a href="" class="brand-logo">Ruff Spots</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li>
+                        <a href="search.html">Search</a>
+                    </li>
+                    <li>
+                        <a href="browse.html">Near Me
+                            <!-- <span class="new badge">4</span> -->
+                        </a>
+                    </li>
+                    <li>
+                        <a href="search.html">Add</a>
+                    </li>
+                    <li>
+    
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
 
 <div id="places"></div>
 <script src="js/result.js" type="text/javascript"></script>
