--- a/public/browse.html
+++ b/public/browse.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!--This page is now BROWSE - 4A -->
+    <!--This page is now BROWSE - 4A/B -->
 
 <div id="places"></div>
 <script src="js/browse.js" type="text/javascript"></script>
