--- a/public/result.html
+++ b/public/result.html
@@ -30,9 +30,11 @@
 
 <body>
     <!--This page is now SEARCH RESULTS - 2B -->
-    <div class="row">
-        <div id="places" class="">
-            <!--Results will be appended here-->
+    <div class="container">
+        <div class="row">
+            <div id="places">
+                <!--Results will be appended here-->
+            </div>
         </div>
     </div>
 
