--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 
-<body>
+<body id="geolocate">
   <header>
     <nav class="brown lighten-2">
       <div class="nav-wrapper">
@@ -102,7 +102,24 @@
 
     <div class="row center-align">
     <div class="col s6 offset-s3">
-    <a class="waves-effect waves-light btn">Near Me</a>
+        <form id="typeOfPlace">
+        <div class="input-field">
+            <select class="icons">
+              <option value="" disabled selected>Choose your option</option>
+              <option value="park" data-icon="img/sample1.jpg" class="circle">Parks</option>
+              <option value="food" data-icon="img/sample2.jpg" class="circle">Restaurants</option>
+              <option value="natural feature" data-icon="img/sample1.jpg" class="circle">Hiking</option>
+              <option value="cafe" data-icon="img/sample2.jpg" class="circle">Cafes</option>
+              <option value="store" data-icon="img/sample1.jpg" class="circle">Shopping</option>
+              <option value="bar" data-icon="img/sample2.jpg" class="circle">Bars</option>
+            </select>
+            <!-- <label>Images in select</label> -->
+          </div>
+          <button class="btn waves-effect waves-light" name ="action" id="localSubmit" type="submit" value="Submit">Submit!
+              <i class="material-icons right">send</i>
+            </button>
+            </form>
+    <!-- <a class="waves-effect waves-light btn localSubmit">Near Me</a> -->
   </div>
   </div>
 
@@ -167,6 +184,8 @@
       $(".button-collapse").sideNav();
     });
   </script>
+
+<script src="js/index.js" type="text/javascript"></script>
 
 </body>
 
