--- a/public/result.html
+++ b/public/result.html
@@ -17,10 +17,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Google Places API-->
     <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF3cJTRy-rvv-j_2VUSZJs22QjvRzVVcg"></script> -->
-    <title>Ruff Spot | Results </title>
+    <title>Ruff Spot | Results</title>
 </head>
 
 <body>
+    <nav class="brown lighten-2">
+        <div class="nav-wrapper">
+            <div class="container">
+                <a href="index.html" class="brand-logo">RUFF SPOTS</a>
+                <a href="#" data-activates="mobile-menu" class="button-collapse">
+                    <i class="material-icons">menu</i>
+                </a>
+            </div>
+        </div>
+    </nav>
     <!--This page is now SEARCH RESULTS - 2B -->
     <div class="container">
         <div class="row">
