--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,15 @@
       flex: 1 0 auto;
     }
   </style>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+          
+
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -95,14 +104,58 @@
 
     <div class="row center-align">
       <div class="col s12">
-      <a class="waves-effect waves-light btn">Search</a>
-      <a class="waves-effect waves-light btn">Add   </a>
+      <a class="waves-effect waves-light btn">Find a Ruff Spot</a>
+      <!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Add a Ruff Spot!</h4>
+      <div class="panel panel-default">
+        
+        <div class="panel-body">
+
+          <form role="form">
+
+            <div class="form-group">
+              <label for="ruff-name">Name of Ruff Spot</label>
+              <input type="text" class="form-control" id="ruff-name">
+            </div>
+
+            <div class="form-group">
+              <label for="ruff-address">Address</label>
+              <input type="text" class="form-control" id="ruff-address">
+            </div>
+
+            <div class="form-group">
+              <label for="ruff-website">Website</label>
+              <input type="text" class="form-control" id="ruff-website">
+            </div>
+
+            <div class="form-group">
+              <label for="ruff-phone">Phone Number</label>
+              <input type="text" class="form-control" id="ruff-phone">
+            </div>
+
+            <form action="/action_page.php">
+              <select name="cars">
+                <option value="park">Volvo</option>
+                <option value="restaurant">Saab</option>
+                <option value="fiat">Fiat</option>
+                <option value="audi">Audi</option>
+              </select>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add This Ruff Spot!</a>
+    </div>
+  </div>
     </div>
     </div>
 
     <div class="row center-align">
     <div class="col s6 offset-s3">
-    <a class="waves-effect waves-light btn">Near Me</a>
+    <a class="waves-effect waves-light btn">Ruff Spots Near Me</a>
   </div>
   </div>
 
@@ -169,5 +222,6 @@
   </script>
 
 </body>
+<script src="js/search.js" type="text/javascript"></script>
 
 </html>
