--- a/public/result.html
+++ b/public/result.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <a href="index.html" class="brand-logo">RUFF SPOTS</a>
                 <a href="#" data-activates="mobile-menu" class="button-collapse">
-                    <i class="material-icons">menu</i>
+                    <i class="material-icons">Ruff</i>
                 </a>
             </div>
         </div>
@@ -35,7 +35,21 @@
     <div class="container">
         <div class="row">
             <div id="places">
+                <h2 id="search-results">Search Results || <span></span></h2>
                 <!--5 Results will be appended here-->
+                <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                          <img class="activator" src="images/office.jpg">
+                        </div>
+                        <div class="card-content">
+                          <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                          <p><a href="#">This is a link</a></p>
+                        </div>
+                        <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
+                      </div>
             </div>
         </div>
     </div>
