--- a/public/index.html
+++ b/public/index.html
@@ -38,16 +38,16 @@
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
-              <a href="#">item1</a>
+              <a href="#">Home</a>
             </li>
             <li>
-              <a href="#">item2</a>
+              <a href="browse.html">Browse</a>
             </li>
             <li>
-              <a href="#">item3</a>
+              <a href="search.html">Search</a>
             </li>
             <li>
-              <a href="#">item4</a>
+              <a href="result.html">Near Me</a>
             </li>
           </ul>
           <ul class="side-nav" id="mobile-menu">
@@ -68,16 +68,16 @@
               </div>
             </li>
             <li>
-              <a href="#">item1</a>
+              <a href="#">Home</a>
             </li>
             <li>
-              <a href="#">item2</a>
+              <a href="browse.html">Browse</a>
             </li>
             <li>
-              <a href="#">item3</a>
+              <a href="search.html">Search</a>
             </li>
             <li>
-              <a href="#">item4</a>
+              <a href="result.html">Near Me</a>
             </li>
           </ul>
         </div>
@@ -124,9 +124,10 @@
     <div class="row">
       <div class="col s12 m8 offset-m2">
         <h2 class="header center-align">About Ruff Spots</h2>
-        <div class="card horizontal">
+        <div class="card">
           <div class="card-image">
-            <img src="https://lorempixel.com/100/190/nature/6">
+            <img src="img/sample1.jpg">
+          <span class="card-title">Woof Woof</span>
           </div>
           <div class="card-stacked">
             <div class="card-content">
