--- a/public/browse.html
+++ b/public/browse.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Google Places API-->
     <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF3cJTRy-rvv-j_2VUSZJs22QjvRzVVcg"></script> -->
-    <title>Ruff Spot | Results</title>
+    <title>Ruff Spot | Browse</title>
 </head>
 
 <body>
@@ -35,13 +35,13 @@
     <div class="container">
         <div class="row">
             <div id="places">
-                <h2 id="search-results">Search Results ||
+                <h2 id="search-results">Browse || Ruff Spots
                     <span></span>
                 </h2>
                 <!--5 Results will be appended here-->
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/office.jpg">
+                        <img class="activator" src="img/sample2.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Card Title
