--- a/public/result.html
+++ b/public/result.html
@@ -39,7 +39,7 @@
                 <!--5 Results will be appended here-->
                 <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                          <img class="activator" src="images/office.jpg">
+                          <img class="activator" src="img/sample1.jpg">
                         </div>
                         <div class="card-content">
                           <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
