--- a/public/result.html
+++ b/public/result.html
@@ -50,6 +50,18 @@
                           <p>Here is some more information about this product that is only revealed once clicked on.</p>
                         </div>
                       </div>
+                      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+                      <!-- Modal Structure -->
+                      <div id="modal1" class="modal modal-fixed-footer">
+                        <div class="modal-content">
+                          <h4>Add Ruff Spot</h4>
+                          <p>This is a run down on adding ruff spots and included will be the modal info and content to be submitted by the user...</p>
+                        </div>
+                        <div class="modal-footer">
+                          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+                        </div>
+                      </div>
             </div>
         </div>
     </div>
