--- a/public/search.html
+++ b/public/search.html
@@ -58,7 +58,7 @@
             <form class="col s12">
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="input-zipCode" placeholder="zipcode" value="" type="text" class="validate">
+                        <input id="input-zipCode" placeholder="zipcode" value="" type="number" max="5" class="validate">
                         <br>
                         <label for="zipCode"></label>
                     </div>
