--- a/public/result.html
+++ b/public/result.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Import jQuery before materialize.js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Import Google Icon Font-->
@@ -13,8 +15,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <!--Import jQuery before materialize.js-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Google Places API-->
     <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF3cJTRy-rvv-j_2VUSZJs22QjvRzVVcg"></script> -->
     <title>Ruff Spot | Results</title>
@@ -35,24 +35,30 @@
     <div class="container">
         <div class="row">
             <div id="places">
-                <h2 id="search-results">Search Results || <span></span></h2>
+                <h2 id="search-results">Search Results</h2>
+                <p>Select a place to add it</p>
                 <!--5 Results will be appended here-->
-                <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                          <img class="activator" src="img/sample1.jpg">
-                        </div>
-                        <div class="card-content">
-                          <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                          <p><a href="#">This is a link</a></p>
-                        </div>
-                        <div class="card-reveal">
-                          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                          <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                        </div>
-                      </div>
             </div>
         </div>
     </div>
+
+
+    <!-- Modal Trigger -->
+    <!-- <a class="waves-effect waves-light btn modal-trigger" href="#addPlace">Modal</a> -->
+
+    <!-- Modal Structure -->
+    <div id="addPlace" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <h4 id="title" class ="center-align"></h4>
+            <p id="location" class="center-align"></p>
+            <br>
+            <p class="center-align">If you know this location to be a ruff spot, you can add it using the add button below</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+        </div>
+    </div>
+
 
     <script src="js/result.js" type="text/javascript"></script>
 </body>
