--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,9 @@
   <!-- Your custom styles -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Used as an example only to position the footer at the end of the page.
-    You can delete these styles or move it to your custom css file -->
-  <style>
-    body {
-      display: flex;
-      min-height: 100vh;
-      flex-direction: column;
-    }
 
-    main {
-      flex: 1 0 auto;
-    }
-  </style>
-  <!-- Compiled and minified JavaScript -->
+
+  <!- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 
@@ -138,7 +128,7 @@
         <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a>
 
         <!-- Modal Structure -->
-        <div id="modal1" class="modal">
+        <!-- <div id="modal1" class="modal">
           <div class="modal-content">
             <h4>Add a Ruff Spot!</h4>
             <div class="panel panel-default">
@@ -187,7 +177,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="row center-align">
           <div class="col s6 offset-s3">
@@ -242,11 +232,11 @@
     crossorigin="anonymous"></script>
   <!-- Materialize JS CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script>
+  <!-- <script>
     $("document").ready(function () {
       $(".button-collapse").sideNav();
     });
-  </script>
+  </script> -->
 
   <script src="js/index.js" type="text/javascript"></script>
 
