--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <!-- Your custom styles -->
   <link rel="stylesheet" href="css/style.css">
-  <!-- Used as an example only to position the footer at the end of the page.
+  <!--  google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Special+Elite" rel="stylesheet">
 
 
-  <!- Compiled and minified JavaScript -->
+  <!-- Compiled and minified JavaScript --> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 
@@ -87,13 +88,13 @@
     <!-- Your content here -->
     <div class="row center-align">
       <div class="col s12"></div>
-      <h2 class="logo center-align">RUFF SPOTS LOGO HERE</h2>
+      <h2 class="logo center-align">RUFF SPOTS</h2>
 
     </div>
 
     <div class="row">
       <div class="col s12 m8 offset-m2">
-        <h2 class="header center-align">About Ruff Spots</h2>
+        <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend. Or Some One-liner About The App Goes Here</h3>
         <div class="card">
           <div class="card-image">
             <img src="img/sample1.jpg">
