--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
   <!-- Your custom styles -->
   <link rel="stylesheet" href="css/style.css">
   <!--  google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Special+Elite" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Special+Elite" rel="stylesheet">
 
 
-  <!-- Compiled and minified JavaScript --> 
+  <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 
@@ -25,6 +25,9 @@
   <script type="text/javascript" src="js/materialize.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Materialize Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body id="geolocate">
@@ -86,16 +89,18 @@
   </header>
   <main>
     <!-- Your content here -->
-    <div class="row center-align">
+    <div class="row center-align headIMG">
       <div class="col s12"></div>
-      <h2 class="logo center-align">RUFF SPOTS</h2>
+      <!-- <h2 class="logo center-align">RUFF SPOTS</h2> -->
 
-    </div>
 
-    <div class="row">
-      <div class="col s12 m8 offset-m2">
-        <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend. Or Some One-liner About The App Goes Here</h3>
-        <div class="card">
+      <div class="row">
+        <div class="col s12 m8 offset-m2">
+          <div class="col m9 s4">
+            <div class="tagline">Find Local Spots To Bring Your Four Legged Friend.</div>
+            <!-- <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend.</h3> -->
+          </div>
+          <!-- <div class="card">
           <div class="card-image">
             <img src="img/sample1.jpg">
           <span class="card-title">Woof Woof</span>
@@ -117,126 +122,73 @@
               <a href="#">This is a link</a>
             </div>
           </div>
+        </div> -->
         </div>
       </div>
     </div>
 
 
     <div class="row center-align">
-      <div class="col s12">
-        <a class="waves-effect waves-light btn">Find a Ruff Spot</a>
-        <!-- Modal Trigger -->
-        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a>
+      <div class="col s4">
+        <h3>Spot Search</h3>
+        <!-- <a class="waves-effect waves-light btn ">Find a Ruff Spot</a> -->
+        <a class="btn-floating btn-large waves-effect waves-light btn" href="search.html">
+          <i class="material-icons">home</i>
+        </a>
 
-        <!-- Modal Structure -->
-        <!-- <div id="modal1" class="modal">
-          <div class="modal-content">
-            <h4>Add a Ruff Spot!</h4>
-            <div class="panel panel-default">
+      </div>
 
-              <div class="panel-body">
-
-                <form role="form">
-
-                  <form id="typeOfPlace">
-                    <div class="input-field">
-                      <select class="icons">
-                        <option value="" disabled selected>What kind of Ruff Spot is this?</option>
-                        <option value="park" data-icon="img/park.png" class="circle">Parks</option>
-                        <option value="food" data-icon="img/restaurant.png" class="circle">Restaurants</option>
-                        <option value="natural feature" data-icon="img/hiking.png" class="circle">Hiking</option>
-                        <option value="cafe" data-icon="img/cafe.png" class="circle">Cafes</option>
-                        <option value="store" data-icon="img/shopping-cart.png" class="circle">Shopping</option>
-                        <option value="bar" data-icon="img/bar.png" class="circle">Bars</option>
-                      </select>
-                    </div>
-
-                    <div class="form-group">
-                      <label for="ruff-name">Name of Ruff Spot</label>
-                      <input type="text" class="form-control" id="ruff-name">
-                    </div>
-
-                    <div class="form-group">
-                      <label for="ruff-address">Address</label>
-                      <input type="text" class="form-control" id="ruff-address">
-                    </div>
-
-                    <div class="form-group">
-                      <label for="ruff-website">Website</label>
-                      <input type="text" class="form-control" id="ruff-website">
-                    </div>
-
-                    <div class="form-group">
-                      <label for="ruff-phone">Phone Number</label>
-                      <input type="text" class="form-control" id="ruff-phone">
-                    </div>
+      <div class="col s4">
+        <h3>Ruff Spots Near Me</h3>
+        <div class="rows">
+          <!-- <div class="col s8"> -->
+          <form id="typeOfPlace">
+            <div class="input-field">
+              <select class="icons nearsearch">
+                <option value="park" data-icon="img/park.png" class="circle">Parks</option>
+                <option value="food" data-icon="img/restaurant.png" class="circle">Restaurants</option>
+                <option value="natural feature" data-icon="img/hiking.png" class="circle">Hiking</option>
+                <option value="cafe" data-icon="img/cafe.png" class="circle">Cafes</option>
+                <option value="store" data-icon="img/shopping-cart.png" class="circle">Shopping</option>
+                <option value="bar" data-icon="img/bar.png" class="circle">Bars</option>
+              </select>
 
 
-              </div>
-              <div class="modal-footer">
-                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Add This Ruff Spot!</a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <div class="row center-align">
-          <div class="col s6 offset-s3">
-            <form id="typeOfPlace">
-              <div class="input-field">
-                <select class="icons">
-                    <option value="park" data-icon="img/park.png" class="circle">Parks</option>
-                    <option value="food" data-icon="img/restaurant.png" class="circle">Restaurants</option>
-                    <option value="natural feature" data-icon="img/hiking.png" class="circle">Hiking</option>
-                    <option value="cafe" data-icon="img/cafe.png" class="circle">Cafes</option>
-                    <option value="store" data-icon="img/shopping-cart.png" class="circle">Shopping</option>
-                    <option value="bar" data-icon="img/bar.png" class="circle">Bars</option>
-                </select>
-              </div>
+              <!-- <div class="col s4"> -->
               <button class="btn waves-effect waves-light" name="action" id="localSubmit" type="submit" value="Submit">Submit!
                 <i class="material-icons right">send</i>
               </button>
-            </form>
-          </div>
+              <!-- </div> -->
+              <!-- </div> -->
+            </div>
+          </form>
+
         </div>
-
-
-
-
-
-
+      </div>
+      <div class="col s4">
+        <h3>Submit Your Spot</h3>
+        <a class="btn-floating btn-large waves-effect waves-light btn" href="search.html">
+          <i class="material-icons">add</i>
+        </a>
+        <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a> -->
+      </div>
+    </div>
+    </div>
 
   </main>
-  <footer class="page-footer cyan">
-    <!-- <div class="container">
-      <div class="row"> -->
-    <!-- <div class="col s12 m8 l6">
-          <h5 class="white-text">First Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-        </div>
-        <div class="col s12 m4 l6">
-          <h5 class="white-text">Second Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-        </div> -->
-    <!-- </div>
-    </div> -->
-    <!-- <div class="footer-copyright"> -->
+  <footer class="page-footer brown lighten-2">
     <div class="container">
-      © 2017 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      <p class="grey-text text-lighten-4"> © 2018 - Ruff Spots</p>
+      <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
     </div>
-    <!-- </div> -->
+
   </footer>
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
   <!-- Materialize JS CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <!-- <script>
-    $("document").ready(function () {
-      $(".button-collapse").sideNav();
-    });
-  </script> -->
+
 
   <script src="js/index.js" type="text/javascript"></script>
 
