search page styled

--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,13 @@
     <nav class="brown lighten-2">
       <div class="nav-wrapper">
         <div class="container">
-          <a href="#" class="brand-logo">RUFF SPOTS</a>
+          <a href="index.html" class="brand-logo">RUFF SPOTS</a>
           <a href="#" data-activates="mobile-menu" class="button-collapse">
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
-              <a href="#">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li>
               <a href="browse.html">Browse</a>
