--- a/public/index.html
+++ b/public/index.html
@@ -43,14 +43,12 @@
             <li>
               <a href="index.html">Home</a>
             </li>
-            <li>
-              <a href="browse.html">Browse</a>
-            </li>
+
             <li>
               <a href="search.html">Search</a>
             </li>
             <li>
-              <a href="result.html">Near Me</a>
+              <a href="search.html">Submit</a>
             </li>
           </ul>
           <ul class="side-nav" id="mobile-menu">
@@ -71,16 +69,14 @@
               </div>
             </li>
             <li>
-              <a href="#">Home</a>
+              <a href="index.html">Home</a>
             </li>
-            <li>
-              <a href="browse.html">Browse</a>
-            </li>
+
             <li>
               <a href="search.html">Search</a>
             </li>
             <li>
-              <a href="result.html">Near Me</a>
+              <a href="search.html">Submit</a>
             </li>
           </ul>
         </div>
