--- a/public/search.html
+++ b/public/search.html
@@ -45,14 +45,12 @@
                         <li>
                             <a href="index.html">Home</a>
                         </li>
-                        <li>
-                            <a href="browse.html">Browse</a>
-                        </li>
+
                         <li>
                             <a href="search.html">Search</a>
                         </li>
                         <li>
-                            <a href="search.html">Near Me</a>
+                            <a href="search.html">Submit</a>
                         </li>
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
@@ -75,14 +73,12 @@
                         <li>
                             <a href="index.html">Home</a>
                         </li>
-                        <li>
-                            <a href="browse.html">Browse</a>
-                        </li>
+
                         <li>
                             <a href="search.html">Search</a>
                         </li>
                         <li>
-                            <a href="search.html">Near Me</a>
+                            <a href="search.html">Submit</a>
                         </li>
                     </ul>
                 </div>
@@ -90,23 +86,23 @@
         </nav>
     </header>
     <main>
-       
-            <!-- Your content here -->
-            <div class="row center-align searchIMG">
-                <div class="col s12"></div>
-                <!-- <h2 class="logo center-align">RUFF SPOTS</h2> -->
+
+        <!-- Your content here -->
+        <div class="row center-align searchIMG">
+            <div class="col s12"></div>
+            <!-- <h2 class="logo center-align">RUFF SPOTS</h2> -->
 
 
-                <div class="row">
-                    <div class="col s12 m8 offset-m2">
-                        <div class="col m9 s4">
-                            <div class="tagline">Seach For A Spot</div>
-                            <!-- <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend.</h3> -->
-                        </div>
+            <div class="row">
+                <div class="col s12 m8 offset-m2">
+                    <div class="col m9 s4">
+                        <div class="tagline">Seach For A Spot</div>
+                        <!-- <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend.</h3> -->
                     </div>
                 </div>
             </div>
-            <div class="container center-align">
+        </div>
+        <div class="container center-align">
 
             <form id="searchForm">
 
