added styles to results page and modal

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,15 @@
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="search.html">SEARCH</a></li>
-            <li><a href="search.html">SUBMIT</a></li>
+            <li>
+              <a href="index.html">HOME</a>
+            </li>
+            <li>
+              <a href="search.html">SEARCH</a>
+            </li>
+            <li>
+              <a href="search.html">SUBMIT</a>
+            </li>
           </ul>
           <ul class="side-nav" id="mobile-menu">
             <li>
@@ -44,9 +50,15 @@
                 </div>
               </div>
             </li>
-            <li><a href="index.html">HOME</a></li>
-             <li><a href="search.html">SEARCH</a></li>
-            <li><a href="search.html">SUBMIT</a></li>
+            <li>
+              <a href="index.html">HOME</a>
+            </li>
+            <li>
+              <a href="search.html">SEARCH</a>
+            </li>
+            <li>
+              <a href="search.html">SUBMIT</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -80,39 +92,39 @@
       <div class="col s12 m4">
         <h3>Ruff Spots Near Me</h3>
         <!-- <div class="rows"> -->
-          <!-- <div class="col s12"> -->
-            <form id="typeOfPlace">
-              <div class="input-field brown-text brown-darken-2">
-                <select class="icons nearsearch">
-                  <option value="park" data-icon="img/park.png" class="circle">Parks</option>
-                  <option value="food" data-icon="img/restaurant.png" class="circle">Restaurants</option>
-                  <option value="natural feature" data-icon="img/hiking.png" class="circle">Hiking</option>
-                  <option value="cafe" data-icon="img/cafe.png" class="circle">Cafes</option>
-                  <option value="store" data-icon="img/shopping-cart.png" class="circle">Shopping</option>
-                  <option value="bar" data-icon="img/bar.png" class="circle">Bars</option>
-                </select>
+        <!-- <div class="col s12"> -->
+        <form id="typeOfPlace">
+          <div class="input-field brown-text brown-darken-2">
+            <select class="icons nearsearch">
+              <option value="park" data-icon="img/park.png" class="circle">Parks</option>
+              <option value="food" data-icon="img/restaurant.png" class="circle">Restaurants</option>
+              <option value="natural feature" data-icon="img/hiking.png" class="circle">Hiking</option>
+              <option value="cafe" data-icon="img/cafe.png" class="circle">Cafes</option>
+              <option value="store" data-icon="img/shopping-cart.png" class="circle">Shopping</option>
+              <option value="bar" data-icon="img/bar.png" class="circle">Bars</option>
+            </select>
 
 
-                <!-- <div class="col s4 m2"> -->
-                <button class="btn waves-effect waves-light" name="action" id="localSubmit" type="submit" value="Submit">Submit!
-                  <i class="material-icons right">send</i>
-                </button>
+            <!-- <div class="col s4 m2"> -->
+            <button class="btn waves-effect waves-light" name="action" id="localSubmit" type="submit" value="Submit">Submit!
+              <i class="material-icons right">send</i>
+            </button>
 
-              <!-- </div> -->
+            <!-- </div> -->
           </div>
-          </form>
+        </form>
 
         <!-- </div> -->
       </div>
-    
 
-    <div class="col s4">
-      <h3>Submit Your Spot</h3>
-      <a class="btn-floating btn-large waves-effect waves-light btn" href="search.html">
-        <i class="material-icons">add</i>
-      </a>
-      <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a> -->
-    </div>
+
+      <div class="col s4">
+        <h3>Submit Your Spot</h3>
+        <a class="btn-floating btn-large waves-effect waves-light btn" href="search.html">
+          <i class="material-icons">add</i>
+        </a>
+        <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a> -->
+      </div>
     </div>
     </div>
 
