--- a/public/browse.html
+++ b/public/browse.html
@@ -17,7 +17,7 @@
 
 
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> -->
 
 
     <!--Import jQuery before materialize.js-->
