first commit to clean up, color adding, alter footer to match top

--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
     </div>      
 
   </main>
-  <footer class="page-footer brown lighten-2">
+  <footer class="page-footer">
     <div class="container">
       <p class="grey-text text-lighten-4"> © 2018 - Ruff Spots</p>
       <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
