--- a/public/search.html
+++ b/public/search.html
@@ -104,7 +104,7 @@
                 </div>
         </div>
     </main>
-    <footer class="page-footer brown lighten-2">
+    <footer class="page-footer">
         <div class="container">
             <p class="grey-text text-lighten-4"> © 2018 - Ruff Spots</p>
         </div>
