--- a/public/result.html
+++ b/public/result.html
@@ -119,7 +119,7 @@
         </div>
 
     </main>
-    <footer class="page-footer brown lighten-2">
+    <footer class="page-footer">
         <div class="container">
             <p class="grey-text text-lighten-4"> © 2018 - Ruff Spots</p>
 
