first heroku commit

--- a/public/search.html
+++ b/public/search.html
@@ -27,8 +27,7 @@
         <nav class="brown lighten-2">
             <div class="nav-wrapper">
                 <div class="container">
-                    <a href="index.html" class="brand-logo">RUFF SPOTS</a>
-                    <a href="#" data-activates="mobile-menu" class="button-collapse">
+                    <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width= 175px></a>                    <a href="#" data-activates="mobile-menu" class="button-collapse">
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down">
