--- a/public/result.html
+++ b/public/result.html
@@ -95,10 +95,9 @@
                 <p id="location" class="center-align"></p>
                 <br>
                 <p class="center-align">Select a category to add this ruff spot</p>
-
                 <form class="col s8">
                     <div class="input-field brown-text brown-darken-2">
-                        <select class="icons nearsearch">
+                        <select class="icons nearsearch" id= "category">
                             <option value="park" data-icon="img/park.png" class="circle">Parks</option>
                             <option value="food" data-icon="img/restaurant.png" class="circle">Restaurants</option>
                             <option value="natural feature" data-icon="img/hiking.png" class="circle">Hiking</option>
@@ -108,10 +107,6 @@
                         </select>
                     </div>
                 </form>
-
-
-
-
             </div>
             <div class="modal-footer">
                 <a href="#!" id="newPlace" class="modal-action modal-close waves-effect btn">Add A Ruff Spot</a>
