added success modal to results page

--- a/public/result.html
+++ b/public/result.html
@@ -113,6 +113,20 @@
             </div>
         </div>
 
+
+ <!-- Modal Structure -->
+ <div id="redirectModal" class="modal modal-fixed-footer modalStyle">
+    <div class="modal-content">
+        <h3 class="center-align">Thanks for Submitting Your Spot!</h3>
+    <div class="modal-footer">
+        <a href="/index.html" class="modal-action modal-close waves-effect btn">Search Again</a>
+    </div>
+</div>
+
+
+
+
+
     </main>
     <footer class="page-footer">
         <div class="container">
