--- a/public/result.html
+++ b/public/result.html
@@ -114,12 +114,10 @@
         </div>
 
 
- <!-- Modal Structure -->
+ <!-- Modal Structure For REDIRECT-->
  <div id="redirectModal" class="modal modal-fixed-footer modalStyle">
     <div class="modal-content">
         <h3 class="center-align">Thanks for Submitting Your Spot!</h3>
-    <div class="modal-footer">
-        <a href="/index.html" class="modal-action modal-close waves-effect btn">Search Again</a>
     </div>
 </div>
 
