--- a/public/browse.html
+++ b/public/browse.html
@@ -24,47 +24,45 @@
 
 <body>
     <header>
-        <nav class="brown lighten-2">
-            <div class="nav-wrapper">
-                <div class="container">
-                    <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width= 175px></a>                        <i class="material-icons">menu</i>
-                    </a>
-                    <ul class="right hide-on-med-and-down">
-                            <li>
-                                    <a href="index.html">Home</a>
-                                </li>
-                               
-                                <li>
-                                    <a href="search.html">Search</a>
-                                </li>
-                                <li>
-                                    <a href="search.html">Submit</a>
-                                </li>
-                    </ul>
-                    <ul class="side-nav" id="mobile-menu">
-                        <li>
-                            <div class="userView">
-                                <div class="background">
-                                    <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
-                                </div>
-                            </div>
-                        </li>
-                        <li>
+            <nav class="brown lighten-2">
+                    <div class="nav-wrapper">
+                      <div class="container">
+                        <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width= 175px></a>
+                        <a href="#" data-activates="mobile-menu" class="button-collapse">
+                          <i class="material-icons">menu</i>
+                        </a>
+                        <ul class="right hide-on-med-and-down">
+                          <li>
                             <a href="index.html">HOME</a>
-                        </li>
-                        <li>
+                          </li>
+                          <li>
                             <a href="search.html">SEARCH</a>
-                        </li>
-                        <li>
+                          </li>
+                          <li>
                             <a href="search.html">SUBMIT</a>
-                        </li>
-                    </ul>
-                            
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+                          </li>
+                        </ul>
+                        <ul class="side-nav" id="mobile-menu">
+                          <li>
+                            <div class="userView">
+                              <div class="background">
+                                <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
+                              </div>
+                            </div>
+                          </li>
+                          <li>
+                            <a href="index.html">HOME</a>
+                          </li>
+                          <li>
+                            <a href="search.html">SEARCH</a>
+                          </li>
+                          <li>
+                            <a href="search.html">SUBMIT</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
     </header>
     <main>
     <!--This page is now BROWSE - 4A/B -->
