--- a/public/browse.html
+++ b/public/browse.html
@@ -19,7 +19,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-    <title>Ruff Spot | Browse</title>
+    <title>Ruff Spots | Browse</title>
 </head> 
 
 <body>
