--- a/public/browse.html
+++ b/public/browse.html
@@ -106,11 +106,11 @@
                 <form class="col s8">
                     <div id="rating" class="input-field brown-text brown-darken-2">
                         <select class="icons nearsearch">
-                            <option value="5" data-icon="img/paw.ppg" class="circle">5 They cater to canines!</option>
-                            <option value="4" data-icon="img/paw.png" class="circle">4 This place welcomes dogs!</option>
-                            <option value="3" data-icon="img/paw.png" class="circle">3 Dogs are permitted here.</option>
-                            <option value="2" data-icon="img/paw.png" class="circle">2 Call ahead to check on pooch policy.</option>
-                            <option value="1" data-icon="img/paw.png" class="circle">1 This place is nothing to bark about...</option>
+                            <option value="5" data-icon="img/paw-rate-5.png" class="circle">They cater to canines!</option>
+                            <option value="4" data-icon="img/paw-rate-4.png" class="circle">This place welcomes dogs!</option>
+                            <option value="3" data-icon="img/paw-rate-3.png" class="circle">Dogs are permitted here.</option>
+                            <option value="2" data-icon="img/paw-rate-2.png" class="circle">Call ahead to check on pooch policy.</option>
+                            <option value="1" data-icon="img/paw-rate-1.png" class="circle">This place is nothing to bark about...</option>
 
                         </select>
                     </div>
@@ -120,7 +120,7 @@
                             <div class="row">
                                 <div class="input-field col s12">
                                     <textarea id="textarea1" class="materialize-textarea"></textarea>
-                                    <label for="textarea1">Textarea</label>
+                                    <label for="textarea1">comments</label>
                                 </div>
                             </div>
                         </form>
