cleaning up cards, no more lime color

--- a/public/result.html
+++ b/public/result.html
@@ -19,7 +19,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-    <title>Ruff Spot | Results</title>
+    <title>Ruff Spots | Search Results</title>
 </head>
 
 <body>
@@ -81,7 +81,7 @@
             <!-- <div class="row"> -->
             <div id="places">
                 <h3 id="search-results">No Ruff Spots have been found, but these places might be Ruff Friendly.</h3>
-                <h3>Click to add a Ruff Spot!</h3>
+                <h3>Select a Location to add it as a Ruff Spot!</h3>
                 <!--5 Results will be appended here-->
             </div>
         </div>
