updated nav bar links for submit page

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
               <a href="search.html">SEARCH</a>
             </li>
             <li>
-              <a href="search.html">SUBMIT</a>
+              <a href="submit.html">SUBMIT</a>
             </li>
           </ul>
           <ul class="side-nav" id="mobile-menu">
@@ -57,7 +57,7 @@
               <a href="search.html">SEARCH</a>
             </li>
             <li>
-              <a href="search.html">SUBMIT</a>
+              <a href="submit.html">SUBMIT</a>
             </li>
           </ul>
         </div>
