--- a/public/search.html
+++ b/public/search.html
@@ -38,7 +38,7 @@
                             <a href="search.html">SEARCH</a>
                         </li>
                         <li>
-                            <a href="search.html">SUBMIT</a>
+                            <a href="submit.html">SUBMIT</a>
                         </li>
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
@@ -56,7 +56,7 @@
                             <a href="search.html">SEARCH</a>
                         </li>
                         <li>
-                            <a href="search.html">SUBMIT</a>
+                            <a href="submit.html">SUBMIT</a>
                         </li>
                     </ul>
                 </div>
