--- a/public/browse.html
+++ b/public/browse.html
@@ -72,15 +72,17 @@
         <div class="row center-align searchIMG">
             <div class="col s12"></div>
             <div class="row">
-                <div class="col s12 m8 offset-m2">
-                    <div class="col m9 s4">
+                <div class="col s12 m6 offset-m2">
+                    <!-- <div class="col m9 s4"> -->
                         <div class="tagline">Local Ruff Spots</div>
-                        <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend.</h3>
+                        <!-- <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend.</h3> -->
                     </div>
                 </div>
             </div>
         </div>
         <div class="container">
+                <h3 class="header center-align">Check out these Ruff Spots</h3>
+                  
             <div class="row">
                 <div id="places">
 
