changed browse review modal to reload to search page upon success

--- a/public/browse.html
+++ b/public/browse.html
@@ -161,7 +161,7 @@
          <!-- Modal Structure For SUCCESS-->
  <div id="successModal" class="modal modal-fixed-footer modalStyle">
     <div class="modal-content">
-        <h3 class="center-align">Thanks for Reviewing This Spot!</h3>
+        <h3 class="center-align">Thanks for Reviewing! Lets search for another Spot!</h3>
     </div>
 </div>
 
